style.css
html {
  background-color: black;
}

/* *,
*:before,
*:after {
  max-width: 100%;
} */

.canvasContainer {
  margin: 0 auto;
  text-align: center;
}

.headerContainer {
  position: absolute;
  color: white;
  top: 35%;
  right: 33%;
}

.header {
  font-size: 2.7rem;
  margin-bottom: -2%;
  font-family: "Roboto", sans-serif;
  text-shadow: 5px 5px 5px gray;
}

.subHeader {
  font-size: 2.2rem;
  font-family: "Roboto", sans-serif;
  text-shadow: 5px 5px 5px gray;
}

button {
  margin-top: 5%;
  font-size: 1.3rem;
}

.afterCanvas {
  background-color: white;
  margin-left: -5%;
  margin-right: -5%;
  margin-bottom: -5%;
  padding-right: 10%;
  padding-left: 10%;
  padding-bottom: 7%;
  padding-top: 12.5%;
}

.menuBtn {
  margin-top: -5px;
}

.CTAbtn {
  background-color: #7464a1;
  color: rgb(240, 239, 239);
  padding: 5%;
  margin-top: 7%;
}

.CTAbtn:hover {
  color: rgb(240, 239, 239);
  outline: none;
}

.CTAbtn:active {
  box-shadow: inset 5px gray;
  outline: none;
}

#contact {
  margin-top: 7%;
  margin-bottom: -50px;
  padding: 10%;
  padding-top: 15%;
  /* background-image: url("./img/contact-image.jpg"); */
  background-image: radial-gradient(rgb(101, 101, 101) 1%, black 99%);
}

contact-section {
  padding-top: 5rem;
}
.contact-section .card {
  border: 0;
  border-bottom: 0.25rem solid #7464a1;
}
.contact-section .card h4,
.contact-section .card .h4 {
  font-size: 0.8rem;
  font-family: "Varela Round", -apple-system, BlinkMacSystemFont, "Segoe UI",
    Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji",
    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  text-transform: uppercase;
  letter-spacing: 0.15rem;
}
.contact-section .card hr {
  border-color: #7464a1;
  border-width: 0.25rem;
  width: 3rem;
}
.contact-section .social {
  margin-top: 5rem;
}
.contact-section .social a {
  text-align: center;
  height: 3rem;
  width: 3rem;
  background: rgba(255, 255, 255, 0.1);
  border-radius: 100%;
  line-height: 3rem;
  color: rgba(255, 255, 255, 0.3);
}
.contact-section .social a:hover {
  color: rgba(255, 255, 255, 0.5);
}
.contact-section .social a:active {
  color: #fff;
}

.contact-section {
  padding: 10rem 0;
  background: linear-gradient(
      to bottom,
      rgba(0, 0, 0, 0.1) 0%,
      rgba(0, 0, 0, 0.5) 75%,
      #000 100%
    ),
    url("../assets/img/contact-image.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: scroll;
  background-size: cover;
}

.contactIcon {
  color: #7464a1;
}

.contactIcon2 {
  color: white;
}

.social {
  z-index: 1;
}

footer {
  margin-top: 50px;
  background-color: black;
  padding: 20px;
  /* border-top: 14px #7464a1; */
}

.navbar-light {
  animation-name: FadeIn;
  animation-duration: 0.75s;
  transition-timing-function: linear;
}

@keyframes FadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.navbar-dark {
  animation-name: FadeOut;
  animation-duration: 0.7s;
  transition-timing-function: linear;
}

@keyframes FadeOut {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.aboutHeader {
  text-align: center;
}

.underlineContainer {
  display: flex;
  justify-content: center;
  margin-bottom: 5%;
}

#about {
  border-top: 14px solid #7464a1;
  border-bottom: 14px solid #7464a1;
  margin-top: -7px;
  margin-bottom: -7%;
}

@media only screen and (max-width: 900px) {
  .headerContainer {
    position: absolute;
    color: white;
    top: 35%;
    right: 27%;
    font-family: "Roboto", sans-serif;
    text-shadow: 5px 5px 5px gray;
  }
}

@media only screen and (max-width: 800px) {
  .headerContainer {
    position: absolute;
    color: white;
    top: 35%;
    right: 25%;
    font-family: "Roboto", sans-serif;
    text-shadow: 5px 5px 5px gray;
  }
}

@media only screen and (max-width: 650px) {
  .headerContainer {
    position: absolute;
    color: white;
    top: 35%;
    /* right: 16%; */
    left: 20%;
    font-family: "Roboto", sans-serif;
    text-shadow: 5px 5px 5px gray;
  }
}

@media only screen and (max-width: 550px) {
  .headerContainer {
    position: absolute;
    color: white;
    top: 35%;
    /* right: 12%; */
    left: 26%;
    font-family: "Roboto", sans-serif;
    text-shadow: 5px 5px 5px gray;
  }

  .header {
    font-size: 2rem;
  }

  .subHeader {
    font-size: 1.7rem;
    margin-top: 20px;
    margin-bottom: 35px;
  }
}

@media only screen and (max-width: 400px) {
  .headerContainer {
    position: absolute;
    color: white;
    top: 35%;
    right: 0px;
    /* left: 100px; */
    font-family: "Roboto", sans-serif;
    text-shadow: 5px 5px 5px gray;
  }
}

@media only screen and (max-width: 375px) {
  .headerContainer {
    position: absolute;
    color: white;
    top: 35%;
    /* right: -20px; */
    left: 20px;
    font-family: "Roboto", sans-serif;
    text-shadow: 5px 5px 5px gray;
    width: 90%;
    /* margin-left: 10%; */
    /* padding-left: 5%; */
  }
  .subHeader {
    margin-top: 20px;
    margin-bottom: 30px;
  }
}

